<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.cs185.project.wingman.MainActivity$PlaceholderFragment" >

   <RelativeLayout
        android:id="@+id/selectDrinkLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="vertical" >

       <Button
           android:id="@+id/typeOfDrinkButton"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:text="@string/drinkSelect"
           android:onClick="selectDrink" />
        
   </RelativeLayout>
   
   <RelativeLayout
        android:id="@+id/previousDrinkLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:orientation="vertical" >

       <TextView
           android:id="@+id/prevDrinkLabel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_horizontal"
           android:text="@string/prevDrinkLabel"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <TextView
           android:id="@+id/noDrinkSelected"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true"
           android:text="@string/noDrinkSelected"
           android:textAppearance="?android:attr/textAppearanceLarge" />
        
   </RelativeLayout>
   
   <RelativeLayout
        android:id="@+id/plusOneButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

       <Button
           android:id="@+id/plusOneButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/plusOne" />
        
   </RelativeLayout>
   
   
   <LinearLayout
        android:id="@+id/bacButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:orientation="horizontal" >

       <Button
           android:id="@+id/BACPLACEHOLDER"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/placeholder" />

    </LinearLayout>

</LinearLayout>
